HelloUltraviolet/Fixtures/RejectedSource/Expressions/AllocImplicitNoRegion/Expected.uv
//! Expected diagnostic metadata for the AllocImplicitNoRegion rejected-source specimen.

expectedDiagnostic("E-MEM-3021", "diag.16.EffectfulCoreExpressions")
